<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:weightSum="3"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@android:color/holo_blue_light"
    >


    <TextView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/word_group_title"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"

        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_general_word_group"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/general_word_goup_title"
            android:textSize="25sp"
            android:background="@android:color/transparent"
            />

        <Button
            android:id="@+id/btn_home_word_group"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="25sp"
            android:text="@string/athome_word_group_title"
            android:background="@android:color/transparent"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_outside_word_group"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/outside_word_group_title"
            android:textSize="25sp"
            android:background="@android:color/transparent"
            />

        <Button
            android:id="@+id/btn_sport_word_group"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sport_word_group_title"
            android:textSize="25sp"
            android:background="@android:color/transparent"
            />

    </LinearLayout>


</LinearLayout>